--- a/test-output/index.html
+++ b/test-output/index.html
@@ -7,7 +7,7 @@
 
     <link type="text/css" href="testng-reports1.css" rel="stylesheet" id="ultra" />
     <link type="text/css" href="testng-reports.css" rel="stylesheet" id="retro" disabled="false"/>
-    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type='text/javascript'>
@@ -21,8 +21,7 @@
      -->
   </head>
 
-  <body>
-    <div class="top-banner-root">
+  <body>    <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
@@ -51,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\sathish\AppData\Local\Temp\testng-eclipse-825909070\testng-customsuite.xml</span>
+                    <span>C:\Users\sathish\AppData\Local\Temp\testng-eclipse--201715529\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.MockRecording" class="method navigator-link" hash-for-method="record">record</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.CreateBooking_Restful_Booking" class="method navigator-link" hash-for-method="createBooking">createBooking</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.MockRecording</span>
+              <span class="class-name">mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.CreateBooking_Restful_Booking</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="record">
-                  </a> <!-- record -->
-                  <span class="method-name">record</span>
+                  <a name="createBooking">
+                  </a> <!-- createBooking -->
+                  <span class="method-name">createBooking</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sathish\AppData\Local\Temp\testng-eclipse-825909070\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sathish\AppData\Local\Temp\testng-eclipse--201715529\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.MockRecording&quot;/&gt;
+      &lt;class name=&quot;mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.CreateBooking_Restful_Booking&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'record')
-data.setCell(0, 2, 'mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.MockRecording')
-data.setCell(0, 3, 1747);
+data.setCell(0, 1, 'createBooking')
+data.setCell(0, 2, 'mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.CreateBooking_Restful_Booking')
+data.setCell(0, 3, 4603);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,9 +220,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.MockRecording</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.CreateBooking_Restful_Booking</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">record</span>
+                <span class="method-name">createBooking</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
