--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.MockRecording</td>
+<td>mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.CreateBooking_Restful_Booking</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>record</td>
+<td>createBooking</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
