--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e7ee8">  <td>23/08/06 23:20:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MockRecording.record()[pri:0, instance:mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.MockRecording@2e005c4b]">record</td> 
+<tr bgcolor="b58bd3">  <td>23/08/14 22:43:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateBooking_Restful_Booking.createBooking()[pri:0, instance:mandatoryHomeWork.foundation.RestApi.Mocking_06_08_2023.CreateBooking_Restful_Booking@c8c12ac]">createBooking</td> 
   <td>main@1510467688</td>   <td></td> </tr>
 </table>
